# landa-agent-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.worker  HANDOFF.md  README.md  alembic.ini  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  kb-audit.yml
.planning/: HANDOFF.md  PROJECT.md  ROADMAP.md  STATE.md  config.json
.planning/adr/: 005-malware-scan.md  006-egress-controls.md
.planning/contracts/: lambda-handoff-contract.md
.planning/phases/01-setup-infra/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-07-PLAN.md  01-07-SUMMARY.md  01-08-PLAN.md  01-RESEARCH.md  CHATWOOT_NOTES.md  CONTEXT.md  PLAN-VERIFICATION.md  PLAN.md  RAILWAY_AGENT_NOTES.md  SMOKE_E2E.md
.planning/phases/02-integraci-n-softseguros-whatsapp-cloud-api/: 02-01-PLAN.md  02-01-SUMMARY.md  02-PLAN.md  (+11 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: README  env.py
alembic/versions/: 0001_initial_schema.py  0002_payment_tables.py  0003_audit_log.py  0004_cases_cross_canal.py
app/: conftest.py  healthcheck.py  main.py  worker.py
app/config/: checkpointer.py  db.py  llm.py  logging.py  observability.py  redis.py  settings.py
app/integrations/: _circuit.py  chatwoot.py  lambda_proyect.py  meta_cloud.py  openrouter.py  softseguros.py
app/memory/: __init__.py  case_store.py  debtor_flags.py
app/models/: audit.py  meta.py  softseguros.py
app/security/: audit_log.py  audit_sink.py  input_sanitizer.py  judge.py  kb_auditor.py  output_firewall.py  prompt_firewall.py  rate_limiter.py
app/webhooks/: chatwoot.py  handoff.py  meta.py
chatwoot/: README.md  notes.md
knowledge/: dpg_cartera.md
tests/: conftest.py  test_features_handoff_echo.py  test_health.py  test_integrations_meta_cloud.py  test_integrations_softseguros.py  test_llm_factory.py  test_main_lifespan.py  test_settings.py  test_smoke.py  test_softseguros_readonly.py  test_webhooks_meta.py  test_webhooks_meta_f5.py  test_webhooks_meta_gap2.py  test_worker.py  test_worker_audit.py
tests/integration/: conftest.py  test_payment_e2e.py
tests/integrations/: test_chatwoot.py
tests/security/: test_adversarial.py  test_audit_capture.py  test_egress_allowlist.py  test_judge.py  test_kb_auditor.py  test_prompt_firewall.py
tests/unit/: test_case_store.py  test_settings_audit.py  test_settings_payment.py
(+105 files in other folders)
